--- a/css/app.css
+++ b/css/app.css
@@ -36,7 +36,7 @@
         flex-direction: column;
     }
 
-    .about-col > .col-6 {
+    .about-col > .col {
         width: 100%;
     }
 
@@ -64,7 +64,7 @@
         flex-direction: row;
     }
 
-    .about-col > .col-6 {
+    .about-col > .col {
         width: 50%;
     }
 
